deploy/gcp/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sms
  labels:
    app.kubernetes.io/part-of: student-management-system
